# ExternalLibrariesWithCMake

./: CMakeLists.txt  crow.cpp  sum.cpp
include/: sum.h
test/: simple_test.cpp  simple_test2.cpp
